// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly message for 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       expense
       with total value of 
      <span>
        $1.95
      </span>
    </h1>
    <h2
      className="page-header__title "
    >
      All expenses: 
      <span>
        1
      </span>
    </h2>
    <h2
      className="page-header__title "
    >
      Hidden expenses: 
      <span>
        0
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render correctly message for 2 expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       expense
      s
       with total value of 
      <span>
        $21.45
      </span>
    </h1>
    <h2
      className="page-header__title "
    >
      All expenses: 
      <span>
        2
      </span>
    </h2>
    <h2
      className="page-header__title "
    >
      Hidden expenses: 
      <span>
        0
      </span>
    </h2>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
